# bevy_voxel

./: Cargo.toml  README.md  chunks.md  ideas.md
assets/shaders/: pbr.wgsl  terrain.wgsl
src/: main.rs
src/chunk/: mod.rs
src/chunk/generators/: flat_terrain.rs  height_noise_terrain.rs  mod.rs  noise_terrain.rs
src/chunk/mesh/: mod.rs  voxel.rs
src/debug/: app.rs  mod.rs  plugin.rs  stats.rs
src/environment/: mod.rs
src/player/: build.rs  mod.rs  raycast.rs
src/plugins/: debug.rs  mod.rs  player.rs  terrain.rs
src/terrain/: block.rs  chunk.rs  generator.rs  marching_cube.rs  mod.rs  test.md
src/terrain/block/: material.rs  mod.rs  shape.rs
src/terrain/chunk_loader/: mod.rs
src/terrain/chunk_mesher/: mod.rs
src/terrain/generators/: flat_terrain.rs  mod.rs  noise_terrain.rs
src/world/: block.rs  mod.rs
src/world/chunk/: loader.rs  material.rs  mod.rs  tasks.rs
src/world/chunk/generator/: default_materializator.rs  flat_terrain.rs  height_noise_terrain.rs  mod.rs  noise_terrain_generator.rs
src/world/chunk/mesh/: mod.rs  voxel.rs
src/world/raycast/: mod.rs
src/world/terrain/: material.rs  mod.rs
src/world/terrain/block_descriptor/: material.rs  mod.rs  shape.rs
src/world/terrain/chunk_loader/: mod.rs
src/world/voxel/: material.rs  mod.rs  shape.rs
