[package]
name = "bevy-procedural"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = false

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19"
# bevy_atmosphere = "0.6"
bevy_atmosphere = { git = "https://github.com/GodGotzi/bevy_atmosphere.git", branch = "master" }
bevy_spectator = { git = "https://github.com/lbenard/bevy_spectator.git", branch = "system_set"}
# bevy_spectator = { path = "../bevy_spectator" }
# bevy_mod_raycast = "0.8"
egui_dock = "0.4"
egui-gizmo = "0.10"
noise = "0.8.2"
# simdnoise = { git = "https://github.com/verpeteren/rust-simd-noise.git", rev = "d12e1ea141488a9f4a61bf69e41a9327547efad2" }
rayon = "1.5"
interpolation = "*"
futures-lite = "1.11.3"
rand = "0.8.5"
bitflags = "1.2"
ndshape = "0.3.0"
parking_lot = "0.12"

[features]
atmosphere = []
